2009-09-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/basic.exp: Add -big to ASFLAGS for sh*l*-*-netbsdelf*.

2009-09-08  Alan Modra  <amodra@bigpond.net.au>

	* gas/d30v/serial2.l: Adjust position of page break.
	* gas/lns/lns-common-1-alt.d: Match 2009-04-24 change.
	* gas/mt/ms1-16-003.d: Correct reloc name.
	* gas/mt/relocs.d: Elide incorrect file format strings.

2009-09-08  Alan Modra  <amodra@bigpond.net.au>

	* gas/all/gas.exp (do_comment): Don't run on m32c.
	* gas/all/align.d: Likewise.
	* gas/all/incbin.d: Likewise.
	* gas/macros/semi.d: Likewise.
	* gas/elf/ifunc-1.d: Don't run on alpha.

2009-09-04  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/arithmetic.s, gas/bfin/arithmetic.d: Add check
	for (IU) option for multiply and multiply-accumulate to
	data register instructon.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/parallel5.s: New test.
	* gas/bfin/error.exp: New test.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/line_number.l, gas/bfin/line_number.s: New test.
	* gas/bfin/bfin.exp: Add the new test.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/expected_move_errors.s,
	gas/bfin/expected_move_errors.l: Add "LC1 = I0;".
	* gas/bfin/move.s, gas/bfin/move.d: Remove "CYCLES = A0.W".

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/expected_comparison_errors.l: Expect error on Line 13.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* gas/bfin/loop.s, gas/bfin/loop.d: New test.
	* gas/bfin/loop2.s, gas/bfin/loop2.d: New test.
	* gas/bfin/loop3.s, gas/bfin/loop3.d: New test.
	* gas/bfin/bfin.exp: Add the new tests.

2009-09-02  Jie Zhang  <jie.zhang@analog.com>

	From  Bernd Schmidt  <bernd.schmidt@analog.com>
	* gas/bfin/expected_errors.l, gas/bfin/expected_errors.s:
	Check error messages for invalid load/store insns.

2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/att-regs.s: Add ymm tests for 16bit and 64bit.
	* gas/i386/intel-regs.s: Likewise.

	* gas/i386/att-regs.d: Updated.