@@ -1,3 +1,7 @@
+2009-09-09  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* gas/sh/sh64/syntax-1.s: Regenerate.
+
 2009-09-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* gas/sh/basic.exp: Add -big to ASFLAGS for sh*l*-*-netbsdelf*.
